--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ build-image:
     - static
   script:
     - echo "$CI_JOB_TOKEN" | docker login $CI_REGISTRY -u $CI_REGISTRY_USER --password-stdin
-    - docker buildx use multi-builder
+    - docker buildx create --use --name multi-builder || docker buildx use multi-builder
     - docker buildx build --push --platform linux/amd64,linux/arm64 \
       -t $IMAGE_NAME:$MP_DOCKER_TAG \
       --build-arg MP_VERSION=$MP_VERSION \
